added actual applications URI - main workflow is now functional

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 13:56:29,213 | INFO : Already signed in\n"
+      "2025-03-25 08:54:50,699 | INFO : Already signed in\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,32 +204,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 14:06:56,559 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "2025-03-21 14:06:59,526 | INFO : View the result in your browser at: https://biolib.com/results/967f4db5-fdf4-49bb-bcd2-e155e08bcd0f/\n"
+      "2025-03-25 08:57:34,527 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.2\n",
+      "2025-03-25 08:57:38,097 | INFO : View the result in your browser at: https://biolib.com/results/14a4d058-2126-412c-a42f-821dbf471bf0/\n"
      ]
     }
    ],
    "source": [
     "# Input parameters (antibody framework and target PDBs are set above)\n",
     "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
-    "num_designs = 20\n",
+    "num_designs = 1\n",
     "\n",
     "# Output directory\n",
     "outdir_rfdiff = \"output/rfdiffusion\"\n",
     "\n",
     "# Run RFdiffusion through BioLib\n",
-    "app_rfdiff = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual RFantibody app ID\n",
+    "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody')  # Replace with actual RFantibody app ID\n",
     "job_rfdiff = app_rfdiff.start(\n",
-    "    antibody=framework_pdb,\n",
-    "    framework_pdb=framework_pdb,\n",
     "    target_pdb=target_pdb,\n",
+    "    framework_pdb=framework_pdb,\n",
     "    hotspot_res=hotspot_res,\n",
     "    design_loops=design_loops,\n",
     "    num_designs=num_designs,\n",
@@ -262,21 +261,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "Saving files...\n",
+      "2025-03-25 09:02:17,858 | INFO : Saving 4 files to output/rfdiffusion...\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
+    "#job_rfdiff = biolib.get_job(\"ff4b0442-acb9-4c44-95fe-28e87b692e7b\") # DEBUG\n",
     "status = job_rfdiff.get_status()\n",
     "if status == \"completed\":\n",
+    "    print(\"Saving files...\")\n",
+    "    job_rfdiff.list_output_files()\n",
     "    job_rfdiff.save_files(outdir_rfdiff)\n",
     "else:\n",
     "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
@@ -297,15 +300,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 13:13:03,324 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "2025-03-21 13:13:05,886 | INFO : View the result in your browser at: https://biolib.com/results/0180dceb-5e54-498c-9103-10f3e71f0e15/\n"
+      "2025-03-25 09:04:05,729 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.2\n",
+      "2025-03-25 09:04:10,172 | INFO : View the result in your browser at: https://biolib.com/results/1e712508-e953-4cc2-a367-f65adabf1256/\n"
      ]
     }
    ],
@@ -317,10 +320,9 @@
     "outdir_mpnn = \"output/proteinmpnn\"\n",
     "\n",
     "# Run ProteinMPNN\n",
-    "app_mpnn = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
+    "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')  # Replace with actual app ID, TODO: num seq per target\n",
     "job_mpnn = app_mpnn.start(\n",
-    "    pdb_dir=input_dir,\n",
-    "    num_seq_per_target=1\n",
+    "    pdb=input_dir\n",
     ")"
    ]
   },
@@ -347,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 11:55:01,619 | INFO : Saving 1 files to output/proteinmpnn...\n"
+      "2025-03-25 09:05:07,112 | INFO : Saving 1 files to output/proteinmpnn...\n"
      ]
     }
    ],
@@ -389,15 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 11:56:22,664 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "2025-03-21 11:56:23,667 | INFO : View the result in your browser at: https://biolib.com/results/bffaec6d-db39-4fe4-b482-abd65dcc3bd9/\n"
+      "2025-03-25 09:07:27,249 | INFO : Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
+      "2025-03-25 09:07:29,278 | INFO : View the result in your browser at: https://biolib.com/results/67e46298-a095-4549-9b44-97bfcccd12a8/\n"
      ]
     }
    ],
@@ -406,13 +408,13 @@
     "input_dir = outdir_mpnn  # Using the output from ProteinMPNN\n",
     "\n",
     "# Output directory\n",
-    "outdir_rf2 = \"output/rosettfold2\"\n",
+    "outdir_rf2 = \"output/rosettafold2\"\n",
     "\n",
     "# Run RosettaFold2\n",
-    "app_rf2 = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
+    "app_rf2 = biolib.load('BioITWorkshop/RF2Antibody')  # Replace with actual app ID\n",
     "job_rf2 = app_rf2.start(\n",
-    "    pdb_dir=input_dir,\n",
-    "    num_recyles=10,\n",
+    "    pdb=input_dir,\n",
+    "    num_recycles=3,\n",
     ")"
    ]
   },
@@ -434,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 11:56:51,505 | INFO : Saving 1 files to output/rosettfold2...\n"
+      "2025-03-25 09:16:42,313 | INFO : Saving 2 files to output/rosettafold2...\n"
      ]
     }
    ],
@@ -486,15 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 13:49:09,975 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "2025-03-21 13:49:13,914 | INFO : View the result in your browser at: https://biolib.com/results/6e277b2d-cc17-491a-bed1-8d76a0435d1d/\n"
+      "2025-03-25 09:22:36,477 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.26\n",
+      "2025-03-25 09:22:40,119 | INFO : View the result in your browser at: https://biolib.com/results/d07a16ed-6c24-43f9-bddd-b73b3dc3a858/\n"
      ]
     }
    ],
@@ -506,9 +508,9 @@
     "outdir_abprofiler = \"output/abprofiler\"\n",
     "\n",
     "# Run RosettaFold2\n",
-    "app_abprofiler = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
+    "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler:0.0.26') # TODO - push to main branch so the last version is used\n",
     "job_abprofiler = app_abprofiler.start(\n",
-    "    pdb_dir=input_dir,\n",
+    "    pdb=f\"{input_dir}/_0_dldesign_0.pdb\", # DEBUG - need to add automatic csv file generation for dir input, accepting hlt format\n",
     ")"
    ]
   },
@@ -533,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "2025-03-25 09:24:15,942 | INFO : Saving 10 files to output/abprofiler...\n"
      ]
     }
    ],
@@ -574,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
