minor changes with app I/O and args

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -300,15 +300,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:04:05,729 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.2\n",
-      "2025-03-25 09:04:10,172 | INFO : View the result in your browser at: https://biolib.com/results/1e712508-e953-4cc2-a367-f65adabf1256/\n"
+      "2025-03-25 12:07:34,473 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
+      "2025-03-25 12:07:38,260 | INFO : View the result in your browser at: https://biolib.com/results/1733e9ae-f906-4e20-ab85-0d08334b6119/\n"
      ]
     }
    ],
@@ -320,9 +320,10 @@
     "outdir_mpnn = \"output/proteinmpnn\"\n",
     "\n",
     "# Run ProteinMPNN\n",
-    "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')  # Replace with actual app ID, TODO: num seq per target\n",
+    "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')  # Replace with actual app ID\n",
     "job_mpnn = app_mpnn.start(\n",
-    "    pdb=input_dir\n",
+    "    pdb=input_dir,\n",
+    "    num_seq_per_struct=3\n",
     ")"
    ]
   },
@@ -349,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:05:07,112 | INFO : Saving 1 files to output/proteinmpnn...\n"
+      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
      ]
     }
    ],
@@ -488,15 +489,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:22:36,477 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.26\n",
-      "2025-03-25 09:22:40,119 | INFO : View the result in your browser at: https://biolib.com/results/d07a16ed-6c24-43f9-bddd-b73b3dc3a858/\n"
+      "2025-03-25 11:53:27,142 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
+      "2025-03-25 11:53:30,678 | INFO : View the result in your browser at: https://biolib.com/results/c7054aa6-17ad-47eb-8128-997ff58ad845/\n"
      ]
     }
    ],
@@ -508,9 +509,9 @@
     "outdir_abprofiler = \"output/abprofiler\"\n",
     "\n",
     "# Run RosettaFold2\n",
-    "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler:0.0.26') # TODO - push to main branch so the last version is used\n",
+    "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler') # TODO - push to main branch so the last version is used\n",
     "job_abprofiler = app_abprofiler.start(\n",
-    "    pdb=f\"{input_dir}/_0_dldesign_0.pdb\", # DEBUG - need to add automatic csv file generation for dir input, accepting hlt format\n",
+    "    pdb=input_dir, # DEBUG - need to add automatic csv file generation for dir input, accepting hlt format\n",
     ")"
    ]
   },
@@ -535,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:24:15,942 | INFO : Saving 10 files to output/abprofiler...\n"
+      "2025-03-25 11:54:00,842 | INFO : Saving 10 files to output/abprofiler...\n"
      ]
     }
    ],
