--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 08:54:50,699 | INFO : Already signed in\n"
+      "2025-03-25 14:31:40,457 | INFO : Already signed in\n"
      ]
     }
    ],
@@ -129,18 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-03-21 14:08:02 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/hu-4D5-8_Fv.pdb [131172/131172] -> \"hu-4D5-8_Fv.pdb\" [1]\n",
-      "2025-03-21 14:08:03 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/rsv_site3.pdb [461944/461944] -> \"rsv_site3.pdb\" [1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download input files if not already present\n",
     "!wget --no-verbose -nc \"https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/hu-4D5-8_Fv.pdb\"\n",
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,30 +180,30 @@
     "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
     "\n",
     "Already set above:\n",
-    "- **antibody.framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
-    "- **antibody.target_pdb**: Path to the target protein structure (e.g. rsv_site3.pdb)\n",
-    "- **ppi.hotspot_res**: List of hotspot residues defining our epitope (target binding site)\n",
+    "- **framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
+    "- **target_pdb**: Path to the target protein structure (e.g. rsv_site3.pdb)\n",
+    "- **hotspot_res**: List of hotspot residues defining our epitope (target binding site)\n",
     "\n",
     "New parameters:\n",
-    "- **antibody.design_loops**: Dictionary mapping each CDR loop to a range of allowed loop lengths\n",
+    "- **design_loops**: Dictionary mapping each CDR loop to a range of allowed loop lengths\n",
     "  - L1, L2, L3: Light chain CDR loops\n",
     "  - H1, H2, H3: Heavy chain CDR loops\n",
     "  - Numbers specify length ranges (e.g., L1:8-13 means loop L1 can be 8-13 residues long)\n",
     "  - Example: `[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]`\n",
-    "- **inference.num_designs**: Number of designs to generate (20)\n"
+    "- **num_designs**: Number of designs to generate (20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 08:57:34,527 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.2\n",
-      "2025-03-25 08:57:38,097 | INFO : View the result in your browser at: https://biolib.com/results/14a4d058-2126-412c-a42f-821dbf471bf0/\n"
+      "2025-03-25 16:15:56,983 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.2\n",
+      "2025-03-25 16:16:01,125 | INFO : View the result in your browser at: https://biolib.com/results/50b629d4-2b62-49ce-b8d1-733fb4038bb7/\n"
      ]
     }
    ],
@@ -220,9 +211,6 @@
     "# Input parameters (antibody framework and target PDBs are set above)\n",
     "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
     "num_designs = 1\n",
-    "\n",
-    "# Output directory\n",
-    "outdir_rfdiff = \"output/rfdiffusion\"\n",
     "\n",
     "# Run RFdiffusion through BioLib\n",
     "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody')  # Replace with actual RFantibody app ID\n",
@@ -242,8 +230,8 @@
     "#### Wait for RFdiffusion output files (~2-3 minutes)\n",
     "The RFdiffusion step generates PDB files containing the antibody framework with designed CDR loops docked to the target protein. At this stage, the CDR loops have backbone structures but no amino acid sequences yet!\n",
     "\n",
-    "Output files:\n",
-    "- ab_rfdiffusion_output.pdb - Antibody PDB backbone (N, Ca, C, O atoms only), lacking the CDR loop residues (which will be predicted in the next step)\n",
+    "Main output file:\n",
+    "- output/rfdiffusion/_0.pdb - Antibody PDB backbone (N, Ca, C, O atoms only), lacking the CDR loop residues (which will be predicted in the next step)\n",
     "\n",
     "Example output format:\n",
     "```pdb\n",
@@ -261,28 +249,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving files...\n",
-      "2025-03-25 09:02:17,858 | INFO : Saving 4 files to output/rfdiffusion...\n"
+      "2025-03-25 16:29:28,326 | INFO : Saving 4 files to output/rfdiffusion...\n",
+      "\u001b[01;34moutput/rfdiffusion\u001b[0m\n",
+      "├── \u001b[00m_0.pdb\u001b[0m\n",
+      "├── \u001b[00m_0.trb\u001b[0m\n",
+      "└── \u001b[01;34mtraj\u001b[0m\n",
+      "    ├── \u001b[00m_0_Xt-1_traj.pdb\u001b[0m\n",
+      "    └── \u001b[00m_0_pX0_traj.pdb\u001b[0m\n",
+      "\n",
+      "2 directories, 4 files\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
     "#job_rfdiff = biolib.get_job(\"ff4b0442-acb9-4c44-95fe-28e87b692e7b\") # DEBUG\n",
-    "status = job_rfdiff.get_status()\n",
-    "if status == \"completed\":\n",
-    "    print(\"Saving files...\")\n",
-    "    job_rfdiff.list_output_files()\n",
-    "    job_rfdiff.save_files(outdir_rfdiff)\n",
-    "else:\n",
-    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
+    "assert job_rfdiff.get_status() == \"completed\", \"Job still in progress...\"\n",
+    "job_rfdiff.save_files(\"output/rfdiffusion\", skip_file_if_exists=True)\n",
+    "!tree output/rfdiffusion"
    ]
   },
   {
@@ -295,35 +286,32 @@
     "The second step takes the docks generated by RFdiffusion and assigns amino acid sequences to the CDR loops using ProteinMPNN. We use the base version of ProteinMPNN (not an antibody-finetuned model) with a wrapper script that focuses on designing just the CDR loops.\n",
     "\n",
     "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
-    "- **pdbdir**: Directory containing the previous RFdiffusion output PDB files"
+    "- **pdb**: Directory containing the previous RFdiffusion output PDB files, or a single PDB file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 12:07:34,473 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
-      "2025-03-25 12:07:38,260 | INFO : View the result in your browser at: https://biolib.com/results/1733e9ae-f906-4e20-ab85-0d08334b6119/\n"
+      "2025-03-25 16:30:00,933 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
+      "2025-03-25 16:30:05,670 | INFO : View the result in your browser at: https://biolib.com/results/2f7a8835-c9c0-4b70-bcd0-0d538494109b/\n"
      ]
     }
    ],
    "source": [
     "# Input directory\n",
-    "input_dir = outdir_rfdiff  # Using the output from RFdiffusion\n",
-    "\n",
-    "# Output directory\n",
-    "outdir_mpnn = \"output/proteinmpnn\"\n",
+    "input_dir = \"output/rfdiffusion\"  # Using the output from RFdiffusion\n",
     "\n",
     "# Run ProteinMPNN\n",
-    "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')  # Replace with actual app ID\n",
+    "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')\n",
     "job_mpnn = app_mpnn.start(\n",
     "    pdb=input_dir,\n",
-    "    num_seq_per_struct=3\n",
+    "    num_seqs_per_struct=3\n",
     ")"
    ]
   },
@@ -335,7 +323,10 @@
     "ProteinMPNN outputs PDB files with the same structures as the input but with amino acid sequences designed for the CDR loops. By default, it provides one sequence per input structure.\n",
     "\n",
     "Output files:\n",
-    "- example.pdb (antibody structure with predicted CDR residues)\n",
+    "- _0_dldesign_0.pdb (antibody structure with predicted CDR residues)\n",
+    "- _0_dldesign_1.pdb (antibody structure with predicted CDR residues)\n",
+    "- ... etc\n",
+    "\n",
     "\n",
     "Example output:\n",
     "```pdb\n",
@@ -350,24 +341,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "2025-03-25 16:32:09,804 | INFO : Saving 3 files to output/proteinmpnn...\n",
+      "\u001b[01;34moutput/proteinmpnn\u001b[0m\n",
+      "├── \u001b[00m_0_dldesign_0.pdb\u001b[0m\n",
+      "├── \u001b[00m_0_dldesign_1.pdb\u001b[0m\n",
+      "└── \u001b[00m_0_dldesign_2.pdb\u001b[0m\n",
+      "\n",
+      "1 directory, 3 files\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "status = job_mpnn.get_status()\n",
-    "if status == \"completed\":\n",
-    "    job_mpnn.save_files(outdir_mpnn)\n",
-    "else:\n",
-    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
+    "assert job_mpnn.get_status() == \"completed\", \"Job still in progress...\"\n",
+    "job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
+    "!tree output/proteinmpnn"
    ]
   },
   {
@@ -392,24 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:07:27,249 | INFO : Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
-      "2025-03-25 09:07:29,278 | INFO : View the result in your browser at: https://biolib.com/results/67e46298-a095-4549-9b44-97bfcccd12a8/\n"
+      "2025-03-25 16:34:37,945 | INFO : Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
+      "2025-03-25 16:34:40,237 | INFO : View the result in your browser at: https://biolib.com/results/80992095-3218-4f67-a92b-34e659dcbfba/\n"
      ]
     }
    ],
    "source": [
     "# Input directory\n",
-    "input_dir = outdir_mpnn  # Using the output from ProteinMPNN\n",
-    "\n",
-    "# Output directory\n",
-    "outdir_rf2 = \"output/rosettafold2\"\n",
+    "input_dir = \"output/proteinmpnn\"  # Using the output from ProteinMPNN\n",
     "\n",
     "# Run RosettaFold2\n",
     "app_rf2 = biolib.load('BioITWorkshop/RF2Antibody')  # Replace with actual app ID\n",
@@ -437,24 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 09:16:42,313 | INFO : Saving 2 files to output/rosettafold2...\n"
+      "2025-03-25 16:37:41,762 | INFO : Saving 4 files to output/rosettafold2...\n",
+      "\u001b[01;34moutput/rosettafold2\u001b[0m\n",
+      "├── \u001b[00m_0_dldesign_0.pdb\u001b[0m\n",
+      "├── \u001b[00m_0_dldesign_1.pdb\u001b[0m\n",
+      "├── \u001b[00m_0_dldesign_2.pdb\u001b[0m\n",
+      "└── \u001b[00mscores.csv\u001b[0m\n",
+      "\n",
+      "1 directory, 4 files\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "status = job_rf2.get_status()\n",
-    "if status == \"completed\":\n",
-    "    job_rf2.save_files(outdir_rf2)\n",
-    "else:\n",
-    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
+    "assert job_rf2.get_status() == \"completed\", \"Job still in progress...\"\n",
+    "job_rf2.save_files(\"output/rosettafold2\", skip_file_if_exists=True)\n",
+    "!tree \"output/rosettafold2\""
    ]
   },
   {
@@ -489,24 +486,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 11:53:27,142 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
-      "2025-03-25 11:53:30,678 | INFO : View the result in your browser at: https://biolib.com/results/c7054aa6-17ad-47eb-8128-997ff58ad845/\n"
+      "2025-03-25 16:46:58,576 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
+      "2025-03-25 16:47:02,850 | INFO : View the result in your browser at: https://biolib.com/results/489c86ef-eab3-4aa0-8866-3d4a08387210/\n"
      ]
     }
    ],
    "source": [
     "# Input directory\n",
-    "input_dir = outdir_rf2  # Using the output from RosettaFold2\n",
-    "\n",
-    "# Output directory\n",
-    "outdir_abprofiler = \"output/abprofiler\"\n",
+    "input_dir = \"output/rosettafold2\"  # Using the output from RosettaFold2\n",
     "\n",
     "# Run RosettaFold2\n",
     "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler') # TODO - push to main branch so the last version is used\n",
@@ -549,11 +543,9 @@
    ],
    "source": [
     "# Try to save job output files\n",
-    "status = job_abprofiler.get_status()\n",
-    "if status == \"completed\":\n",
-    "    job_abprofiler.save_files(outdir_abprofiler)\n",
-    "else:\n",
-    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
+    "assert app_abprofiler.get_status() == \"completed\", \"Job still in progress...\"\n",
+    "job_abprofiler.save_files(\"output/abprofiler\", skip_file_if_exists=True)\n",
+    "!tree output/abprofiler"
    ]
   },
   {
@@ -591,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
