--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 14:31:40,457 | INFO : Already signed in\n"
+      "2025-03-25 17:16:49,864 | INFO : Already signed in\n"
      ]
     }
    ],
@@ -291,15 +291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 16:30:00,933 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
-      "2025-03-25 16:30:05,670 | INFO : View the result in your browser at: https://biolib.com/results/2f7a8835-c9c0-4b70-bcd0-0d538494109b/\n"
+      "2025-03-25 17:17:16,917 | INFO : Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
+      "2025-03-25 17:17:20,157 | INFO : View the result in your browser at: https://biolib.com/results/f1cac0f6-1bc5-4018-a18d-08639403f8a8/\n"
      ]
     }
    ],
@@ -341,14 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 16:32:09,804 | INFO : Saving 3 files to output/proteinmpnn...\n",
+      "2025-03-25 17:19:39,104 | INFO : Saving 3 files to output/proteinmpnn...\n",
+      "Skipping output/proteinmpnn/_0_dldesign_0.pdb as a file with that name already exists locally.\n",
+      "Skipping output/proteinmpnn/_0_dldesign_1.pdb as a file with that name already exists locally.\n",
+      "Skipping output/proteinmpnn/_0_dldesign_2.pdb as a file with that name already exists locally.\n",
       "\u001b[01;34moutput/proteinmpnn\u001b[0m\n",
       "├── \u001b[00m_0_dldesign_0.pdb\u001b[0m\n",
       "├── \u001b[00m_0_dldesign_1.pdb\u001b[0m\n",
@@ -360,9 +363,11 @@
    ],
    "source": [
     "# Try to save job output files\n",
-    "assert job_mpnn.get_status() == \"completed\", \"Job still in progress...\"\n",
-    "job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
-    "!tree output/proteinmpnn"
+    "if job_mpnn.is_pending():\n",
+    "    print(\"Job is still running...\")\n",
+    "else:\n",
+    "    job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
+    "    !tree output/proteinmpnn"
    ]
   },
   {
@@ -376,7 +381,7 @@
     "\n",
     "The RFantibody protocol recommends filtering on the following metrics, shown to lead to an up to 10X improvement in experimental success rates.\n",
     "- RF2 predicted alignment error (pAE) < 10\n",
-    "- RMSD between design and RF2 prediction < 2Å\n",
+    "- RMSD between design and RF2 prediction < 2Å for the CDRs\n",
     "\n",
     "### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
     "\n",
@@ -387,15 +392,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 16:34:37,945 | INFO : Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
-      "2025-03-25 16:34:40,237 | INFO : View the result in your browser at: https://biolib.com/results/80992095-3218-4f67-a92b-34e659dcbfba/\n"
+      "2025-03-25 17:23:38,881 | INFO : Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
+      "2025-03-25 17:23:41,251 | INFO : View the result in your browser at: https://biolib.com/results/8b350a73-fba9-4635-a195-4d788340ca33/\n"
      ]
     }
    ],
@@ -419,24 +424,39 @@
     "RosettaFold2 predicts the structure of the designed antibodies and provides confidence metrics. We can use these to filter for promising designs.\n",
     "\n",
     "Output files:\n",
-    "- example.pdb - Predicted structure\n",
+    "- scores.csv - Predicted structural quality scores for filtering of designs\n",
+    "- _0_dldesign_0.pdb - Predicted structure of design 0\n",
+    "- _0_dldesign_1.pdb - Predicted structure of design 1\n",
+    "- ... etc\n",
     "\n",
-    "Example output:\n",
+    "Example output scores.tsv:\n",
+    "```csv\n",
+    "interaction_pae,pae,    pred_lddt,  target_aligned_antibody_rmsd, ..., framework_aligned_cdr_rmsd, ...\n",
+    "8.07,           8.77,   0.9,        11.53,                        ..., 2.18,                       ...\n",
+    "7.52,           8.19,   0.89,       18.97,                        ..., 2.4,                        ...\n",
+    "8.47,           9.15,   0.9,        10.8,                        ...,  2.35,                       ...\n",
+    "\n",
     "```\n",
-    "PLACEHOLDER\n",
-    "```"
+    "\n",
+    "Of these, our target values are:\n",
+    "- Predicted alignment error (pae) below 10\n",
+    "- Framework aligned CDR rmsd (framework_aligned_cdr_rmsd) below 2.00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 16:37:41,762 | INFO : Saving 4 files to output/rosettafold2...\n",
+      "2025-03-25 17:30:34,829 | INFO : Saving 4 files to output/rosettafold2...\n",
+      "Skipping output/rosettafold2/_0_dldesign_2.pdb as a file with that name already exists locally.\n",
+      "Skipping output/rosettafold2/_0_dldesign_1.pdb as a file with that name already exists locally.\n",
+      "Skipping output/rosettafold2/_0_dldesign_0.pdb as a file with that name already exists locally.\n",
+      "Skipping output/rosettafold2/scores.csv as a file with that name already exists locally.\n",
       "\u001b[01;34moutput/rosettafold2\u001b[0m\n",
       "├── \u001b[00m_0_dldesign_0.pdb\u001b[0m\n",
       "├── \u001b[00m_0_dldesign_1.pdb\u001b[0m\n",
@@ -449,10 +469,19 @@
    ],
    "source": [
     "# Try to save job output files\n",
-    "assert job_rf2.get_status() == \"completed\", \"Job still in progress...\"\n",
-    "job_rf2.save_files(\"output/rosettafold2\", skip_file_if_exists=True)\n",
-    "!tree \"output/rosettafold2\""
+    "if job_rf2.is_pending():\n",
+    "    print(\"Job is still running...\")\n",
+    "else:\n",
+    "    job_rf2.save_files(\"output/rosettafold2\", skip_file_if_exists=True)\n",
+    "    !tree \"output/rosettafold2\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -486,15 +515,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 16:46:58,576 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
-      "2025-03-25 16:47:02,850 | INFO : View the result in your browser at: https://biolib.com/results/489c86ef-eab3-4aa0-8866-3d4a08387210/\n"
+      "2025-03-25 17:41:21,718 | INFO : Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
+      "2025-03-25 17:41:26,327 | INFO : View the result in your browser at: https://biolib.com/results/60efe401-0ca8-4fc3-8237-e8089eab16b7/\n"
      ]
     }
    ],
@@ -504,7 +533,7 @@
     "\n",
     "# Run RosettaFold2\n",
     "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler') # TODO - push to main branch so the last version is used\n",
-    "job_abprofiler = app_abprofiler.start(\n",
+    "app_abprofiler = app_abprofiler.start(\n",
     "    pdb=input_dir, # DEBUG - need to add automatic csv file generation for dir input, accepting hlt format\n",
     ")"
    ]
@@ -516,36 +545,74 @@
     "#### Wait for AntibodyProfiler output files (<1 minute)\n",
     "AntibodyProfiler calculates developability metrics compared to approved therapeutic antibodies already on the market, giving warning flags for input PDBs outside this range.\n",
     "\n",
-    "Output file:\n",
-    "- metrics.csv (Summary metrics compared to therapeutically approved antibodies for each PDB)\n",
+    "Main output file:\n",
+    "- results.csv (Summary metrics compared to therapeutically approved antibodies for each PDB)\n",
     "\n",
-    "Example output:\n",
     "```csv\n",
-    "pdb,\t        metric,             value, recommended_range,\tstatus,\n",
-    "example,\tcdrh3_length,\t    7,\t    6-23,\t        good,\n",
-    "example,\tpsh,\t            100.74, 35-150,             good,\n",
-    "example,\ttotal_cdr_length,   41,\t    37-60,              good,\n",
-    "```"
+    "pdb_name,       cdrh3_length,total_cdr_length,flag_cdrh3,flag_total_cdr,psh_value,flag_psh\n",
+    "_0_dldesign_2,  13,          35,              none,       yellow,       116.90, none\n",
+    "_0_dldesign_1,  13,          35,              none,       yellow,       90.53,  none\n",
+    "_0_dldesign_0,  13,          35,              none,       yellow,       149.84, none\n",
+    "```\n",
+    "\n",
+    "Of these, our target values are:\n",
+    "- CDR3 heavy chain length (cdrh3_length): 5-23\n",
+    "- CDR length (total_cdr_length): 39-60\n",
+    "- Patches of surface hydrophobicity in CDR vicinity (psh_value): 30-150\n",
+    "\n",
+    "Values outside this range will be flagged with a color, depending on where they fall in the distribution of human therapeutic antibodies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 11:54:00,842 | INFO : Saving 10 files to output/abprofiler...\n"
+      "2025-03-25 16:57:44,984 | INFO : Saving 24 files to output/abprofiler...\n",
+      "\u001b[01;34moutput/abprofiler\u001b[0m\n",
+      "├── \u001b[01;34m_0_dldesign_0\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0.pdb\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0_Human_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0_Human_CDR_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0_Human_PSH_distribution.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_0_PSH_distribution.png\u001b[0m\n",
+      "│   └── \u001b[00m_0_dldesign_0_Total_CDR_length.png\u001b[0m\n",
+      "├── \u001b[01;34m_0_dldesign_1\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1.pdb\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1_Human_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1_Human_CDR_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1_Human_PSH_distribution.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_1_PSH_distribution.png\u001b[0m\n",
+      "│   └── \u001b[00m_0_dldesign_1_Total_CDR_length.png\u001b[0m\n",
+      "├── \u001b[01;34m_0_dldesign_2\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2.pdb\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2_Human_CDRH3_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2_Human_CDR_length.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2_Human_PSH_distribution.png\u001b[0m\n",
+      "│   ├── \u001b[00m_0_dldesign_2_PSH_distribution.png\u001b[0m\n",
+      "│   └── \u001b[00m_0_dldesign_2_Total_CDR_length.png\u001b[0m\n",
+      "├── \u001b[00mgui.html\u001b[0m\n",
+      "├── \u001b[00moutput.json\u001b[0m\n",
+      "└── \u001b[00mresults.csv\u001b[0m\n",
+      "\n",
+      "4 directories, 24 files\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "assert app_abprofiler.get_status() == \"completed\", \"Job still in progress...\"\n",
-    "job_abprofiler.save_files(\"output/abprofiler\", skip_file_if_exists=True)\n",
-    "!tree output/abprofiler"
+    "if app_abprofiler.is_pending():\n",
+    "    print(\"Job is still running...\")\n",
+    "else:\n",
+    "    job_abprofiler.save_files(\"output/abprofiler\", skip_file_if_exists=True)\n",
+    "    !tree output/abprofiler"
    ]
   },
   {
